deployment/production/statistics-dashboard-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: statistics-dashboard-ui-service-production
  name: statistics-dashboard-ui-service-production
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: statistics-dashboard-ui-production
  type: ClusterIP
